syntax = "proto3";
package dk.itu_real.open_evolution.MinecraftExtendedCommands;
service Greeter {
  // Sends a greeting
  rpc SetBatchBlocks (BatchBlockRequest) returns (BatchBlockReply) {}
}

// The request message containing the user's name.
message BatchBlockRequest {
  repeated CoordinateBlockType blocks = 1;
}

message CoordinateBlockType {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
  string btype = 4;
}

// The response message containing the greetings
message BatchBlockReply {
  string status = 1;
}